--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -51,6 +51,38 @@
         - libfontconfig1
         - libfontconfig1-dev
 
+    - name: Ensure MailHog install directory exists
+      file:
+        path: '/opt/mailhog'
+        owner: root
+        group: root
+        state: directory
+        mode: 0755
+
+    - name: Download MailHog and mhsendmail binaries
+      get_url:
+        url: "{{ item.url }}"
+        dest: "{{ item.dest }}"
+        owner: root
+        group: root
+        mode: 0755
+      with_items:
+        - url: "https://github.com/mailhog/MailHog/releases/download/v1.0.0/MailHog_linux_amd64"
+          dest: "/opt/mailhog/mailhog"
+        - url: "https://github.com/mailhog/mhsendmail/releases/download/v0.2.0/mhsendmail_linux_amd64"
+          dest: "/opt/mailhog/mhsendmail"
+
+    - name: Copy MailHog systemd unit file into place
+      template:
+        src: mailhog.unit.j2
+        dest: /etc/systemd/system/mailhog.service
+        owner: root
+        group: root
+        mode: 0755
+
+    - name: Ensure mailhog is enabled and will start on boot
+      service: name=mailhog state=started enabled=yes
+
     - name: Install PhantomJS
       get_url:
         url: 'https://github.com/Medium/phantomjs/releases/download/v2.1.1/phantomjs-2.1.1-linux-x86_64.tar.bz2'
@@ -98,11 +130,17 @@
            - 'libapache2-mod-php{{php_version}}'
 
     - name: Configure PHP settings
-      ini_file: path=/etc/php/{{php_version}}/apache2/php.ini section=PHP option={{item.option}} value={{item.value}}
+      ini_file: path=/etc/php/{{php_version}}/apache2/php.ini section={{item.section}} option={{item.option}} value={{item.value}}
       with_items:
-        - { option: 'memory_limit', value: '512MB' }
-        - { option: 'php_upload_max_filesize', value: '256M' }
-        - { option: 'display_errors', value: 'On' }
+        - { section: 'PHP', option: 'memory_limit', value: '1024M' }
+        - { section: 'PHP', option: 'php_upload_max_filesize', value: '256M' }
+        - { section: 'PHP', option: 'display_errors', value: 'On' }
+        - { section: 'mail function', option: 'sendmail_path', value: '/opt/mailhog/mhsendmail' }
+
+    - name: Configure PHP CLI settings
+      ini_file: path=/etc/php/{{php_version}}/cli/php.ini section={{item.section}} option={{item.option}} value={{item.value}}
+      with_items:
+        - { section: 'mail function', option: 'sendmail_path', value: '/opt/mailhog/mhsendmail' }
 
     - name: Configure Xdebug
       template:
