--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -5,10 +5,10 @@
 
   vars:
     mysql_root_pass: 'root'
-    php_version: '7.0'
+    php_version: '7.2'
 
   tasks:
-    - name: "FIX: Ubuntu 16.04 LTS doesn't come with certain modules required by Ansible"
+    - name: "FIX: Ubuntu doesn't come with certain modules required by Ansible"
       raw: apt-get install python-minimal aptitude -y
       become: true
       become_user: root
